<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.recipefinder.ui.principal.PrincipalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor"
        tools:context=".ui.principal.PrincipalFragment">

        <TextView
            android:id="@+id/principal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/principal_title"
            android:textColor="@color/grey_3"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/grey_3"
            android:foregroundTint="@color/grey_3"
            android:drawableTint="@color/grey_3"
android:outlineAmbientShadowColor="@color/grey_3"
            android:hint="@string/search_recipe_by_name"
            android:imeOptions="actionSearch"
            android:padding="@dimen/spacing_xmedium"
            android:singleLine="true"
            android:textColor="@color/grey_3"
            android:textColorHint="@color/grey_3"
            android:textColorLink="@color/grey_3"
            android:textColorHighlight="@color/grey_3"
            android:outlineSpotShadowColor="@color/grey_3"
            android:shadowColor="@color/grey_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/principal_title" />

        <LinearLayout
            android:id="@+id/area_option"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/primaryColor"
            android:elevation="8dp"
            android:onClick="@{()->viewModel.filterClicked(@string/countries)}"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_mapamundi" />

            <TextView
                android:id="@+id/title_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/countries"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredient_option"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/primaryColor"
            android:elevation="8dp"
            android:onClick="@{()->viewModel.filterClicked(@string/ingredient)}"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_ingredientes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/ingredient"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_option"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/primaryColor"
            android:elevation="8dp"
            android:onClick="@{()->viewModel.filterClicked(@string/category)}"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/area_option">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_categorias" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/random_option"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/primaryColor"
            android:elevation="8dp"
            android:onClick="@{()->viewModel.randomClicked()}"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredient_option">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_random" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/random_recipe"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorite_option"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/primaryColor"
            android:elevation="8dp"
            android:onClick="@{()->viewModel.favoriteClicked()}"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="@id/category_option"
            app:layout_constraintTop_toBottomOf="@id/category_option">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/favorites"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/secondaryDarkColor"
            app:indicatorSize="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>